[package]
name = "exercise-1"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bubble_sort"
path = "src/bubble_sort.rs"

[[bin]]
name = "selection_sort"
path = "src/selection_sort.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
time = "*"